tests/uncompilable_examples/foreign_types.stderr
error[E0210]: type parameter `U` must be covered by another type when it appears before the first local type (`Enum<'a, U>`)
  --> tests/uncompilable_examples/foreign_types.rs:11:1
   |
11 | #[EnumConversions]
   | ^^^^^^^^^^^^^^^^^^ type parameter `U` must be covered by another type when it appears before the first local type (`Enum<'a, U>`)
   |
   = note: implementing a foreign trait is only possible if at least one of the types for which it is implemented is local, and no uncovered type parameters appear before that first local type
   = note: in this case, 'before' refers to the following order: `impl<..> ForeignTrait<T1, ..., Tn> for T0`, where `T0` is the first and `Tn` is the last
   = note: this error originates in the attribute macro `EnumConversions` (in Nightly builds, run with -Z macro-backtrace for more info)
